syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./pbagreement";

package agreement;

service Agreement {
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {}
}

message RetrieveRequest {
  uint64 user_id = 1;
}

message RetrieveResponse {
  string agreement_token = 1;
  uint64 agreement_token_exp_ns = 2;
}

