syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./pbagreement";

package agreement;

service Agreement {
  rpc Validate (ValidateRequest) returns (google.protobuf.Empty) {}
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {}
}

message RetrieveRequest {
  string access_token = 1;
}

message RetrieveResponse {
    string agreement_token = 1;
    uint64 agreement_token_exp_ns = 2;
}

message ValidateRequest {
  string access_token = 1;
  uint64 agreement_token =2;
  uint64 agreed_user_id = 3;
}

